New section, short literature review on the effect of anormality and unequal variances on Type I and Type II error rates

--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -102,6 +102,28 @@ Fourth, more often than not, psychological processes are captured in situations 
 
 To conclude, there are many common situations in which the homogeneity of variances assumption is unlikely to be true. 
 
+# Stakes Underlying the *F*-test Assumptions of Normality and Homogeneity of variances
+
+Assumptions violations would not be a matter per se, if the *F*-test was perfectly robust against departures from them [@Glass_et_al_1972]. When performing a test, two types of error can be made: Type I error and Type II error. Type I error consists in falsely reject the main hypothesis in favour of an alternative hypothesis, and Type I error rate ($\alpha$) is the proportion of tests, when sampling many times from the same population, that wrongly reject the main hypothesis in favour of an alternative hypothesis [@Perezgonzalez_2015]. Type II error consists in wrongly reject the alternative hypothesis and type II error rate ($\beta$) is the proportion of tests, when sampling many times from the same population, that wrongly reject the alternative hypothesis [@Perezgonzalez_2015]. Finally, the statistical power (1-$\beta$) is the proportion of tests, when sampling many times from the same population, that correctly reject the main hypothesis in favour of an alternative hypothesis.
+
+## Violation of the Normality Assumption
+
+Regarding the type I error rate, the distribution shape has a very little impact on the *F*-test [@Harwell_et_al_1992]. When departures are very small (i.e. a kurtosis between 1.2 and 3 or a skewness between -.4 and .4), the Type I error rate of the *F*-test is very close of expectations even with very small samples of 11 subjects per group [@Hsu_and_Feldt_1969].     
+
+Regarding the type II error rate, many author underlined that departures from normality does not seriously affect the power [@Tiku_1971; @David_and_Johnson_1951; @Harwell_et_al_1992; @Srivastava_1959; @Boneau_1960; @Glass_et_al_1972]. However, following @Srivastava_1959 and @Boneau_1960, kurtosis impacts slightly more the power than skewness; the effect of non-normality on power increases when n are unequal between groups [@Glass_et_al_1972]; lastly the effect of non-normality decreases when n increases [@Srivastava_1959].    
+
+## Violation of Homogeneity of Variances Assumption
+
+Regarding the type I error, the *F*-test is sensitive to unequal variances [@Harwell_et_al_1992]. More specifically, the higher the *SD*-ratio, the higher the impact. When there are only two groups, the impact is smaller than when there are more than two groups [@Harwell_et_al_1992]. When there are more than two groups, the *F*-test becomes more liberal, even when sample sizes are equal across groups [@Tomarken_and_Serlin_1986]. Moreover, when sample sizes are unequal, there is a strong effect of the sample size and variance pairing: in case of positive pairing (i.e. the group with the larger sample size also has the larger variance), the test is too conservative whereas in case of negative pairing (i.e. the group with the larger sample size has the smaller variance), the test is too liberal [@Glass_et_al_1972; @Nimon_2012; @Overall_et_al_1995; @Tomarken_and_Serlin_1986].   
+
+Regarding the type II error, there is a small impact of unequal variances when sample sizes are equal [@Harwell_et_al_1992], however, there is a strong effect of the sample size and variance pairing [@Nimon_2012; @Overall_et_al_1995]. In case of positive pairing, the type II error rate increases (i.e. the power decreases) and in case of negative pairing, the type II error decreases (i.e. the power increases). 
+
+## Cumulative violation of normality and Homogeneity of Variance
+
+Regarding both type I ad type II error, following @Harwell_et_al_1992, there is no interaction between normality violations and unequal variances. Indeed, the effect of heteroscedasticity is relatively constant regardless of the shape of the distribution. 
+
+Throughout mathematical explanations and Monteo Carlo simulations, among the five previously mentioned alternatives, we chose to examine the *F*-test, *W*-test and *F*\*-test and to exclude the James second-order and Alexander-Govern's test. @Tomarken_and_Serlin_1986 have shown that from the available alternatives, the *F*\*-test and the *W*-test are the best choices. Both tests are available in SPSS, which is a widely used software in psychological sciences [@Hoekstra_et_al_2012]. The two later tests were not included, because they yield very similar results to the *W*-test t but are less readily available in statistical software packages. For a more extended description of these two alternatives, see @Schneider_and_Penfield_1997. 
+
 # The Mathematical Differences Between the *F*-test, *W*-test, and *F*\*-test
 
 In this section, we will explain the mathematical differences in how the *F*-test, *W*-test and *F*\*-test are computed, with a focus on the way standard deviations are pooled across groups to stress the implications on heteroscedasticity (see appendix for a numerical example). We suggest readers to focus their attention on the terms involving the variances.
@@ -269,7 +291,7 @@ Finally, when both the normality and equal variances assumptions are not met, th
 In sum, we provide five recommendations:
 
 1. Use the *W*-test instead of the *F*-test to compare groups means. The *F*-test and *F*\*-test should be avoided, because the equal variances assumption is often unrealistic, tests of the equal variances assumption will often fail to detect differences when these are present, the loss of power when using the *W*-test is very small (and often even negligible), and the gain in Type I error control is considerable under a wide range of realistic conditions.
-2. Do not neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g. histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g. variance, skewness, kurtosis) seems to vary between groups, comparing results of the *W*-test with results of a nonparametric procedure is useful in order to better understand the data. 
+2. Do not neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g. histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g. variance, skewness, kurtosis) seems to vary between groups, comparing results of the *W*-test with results of a nonparametric procedure is useful in order to better understand the data.  
 3. Use the Shapiro-Wilk test to detect departures from normality (combined with graphical methods). Contrary to the Kolmogorov-Smirnov test, the Shapiro-Wilk test will almost always detect distributions with high skewness, even with very small sample sizes. With small sample sizes, the *W*-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. When comparing at most four groups, the *W*-test should be avoided if the Shapiro-Wilk test reject the normality assumption, with less than 50 observations per group. When comparing more than four groups, the *W*-test should be avoided if the Shapiro-Wilk test rejects the normality assumption, with less than 100 subjects per group When normality cannot be assumed because of high kurtosis or high skewness, we recommend the use of alternative tests that are not based on means comparison, such as the trimmed means test [@Erceg-Hurn_Mirosevich_2008] \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution . Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see @Erceg-Hurn_Mirosevich_2008.
 
 4. Perform a-priori power-analyses. Fifty subjects per group are generally enough to control the Type I error rate, but power analyses are still important in order to determine the required sample sizes to achieve sufficient power to detect a statistically significant difference [see @Albers_and_Lakens_2018]. 
