Revised introduction + Reference to github instead of OSF

--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -1,6 +1,6 @@
 ---
 title             : "Taking Parametric Assumptions Seriously: Arguments for the Use of Welch's *F*-test instead of the Classical *F*-test in One-way ANOVA"
-shorttitle        : "W-test instead of F-test"
+shorttitle        : "F-test vs. F*-test and W-test"
 
 author: 
   - name          : "Marie Delacre" 
@@ -22,11 +22,11 @@ affiliation:
     institution   : "Eindhoven University of Technology, Human Technology Interaction Group, Eindhoven, the Netherlands "
 
 authornote: |
-  All materials required to reproduce the analyses reported in this article are available at https://osf.io/ru9tz/
+  All materials required to reproduce the analyses reported in this article are available at https://github.com/mdelacre/W-ANOVA
 
   This work was supported by the Netherlands Organization for Scientific Research (NWO) VIDI grant 452-17-013.
   
-  First author performed simulations. First, second and fourth authors contributed to the design. All authors contributed to the writing and the review of the literature. The Supplemental Material, including the full R code for the simulations and plots can be obtained from https://github.com/mdelacre/Welch-ANOVA. The authors declare that they have no conflicts of interest with respect to the authorship or the publication of this article.
+  First author performed simulations. First, second and fourth authors contributed to the design. All authors contributed to the writing and the review of the literature. The Supplemental Material, including the full R code for the simulations and plots can be obtained from https://github.com/mdelacre/W-ANOVA. The authors declare that they have no conflicts of interest with respect to the authorship or the publication of this article.
 
 abstract: |
   Parametric tests rely on two main assumptions: normality of the distribution and equality of variances. We argue that these assumptions are often unrealistic in the field of psychology. We underline the current lack of attention to parametric assumptions through an analysis of researchers' practices. Through Monte Carlo simulations we illustrate the consequences of performing the classic parametric *F*-test for ANOVA when the test assumptions are not met on the Type I error rate and statistical power. Under realistic deviations from the assumption of equal variances the classic *F*-test can yield severely biased results and lead to invalid statistical inferences. We examine two common alternatives to the *F*-test, namely the Welch's ANOVA (*W*-test) and the Brown-Forsythe test (*F\**-test). Our simulations show that the *W*-test is a better alternative and we therefore recommend using the *W*-test by default when comparing means. We provide a detailed example explaining how to perform the *W*-test in SPSS and R. We summarize our conclusions in five practical recommendations that researchers can use to improve their statistical practices.    
@@ -70,7 +70,9 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 render_appendix("Appendix.Rmd")
 ```
 
-When comparing independent groups researchers often analyze the means by performing a classical Analysis of Variance (ANOVA) *F*-test [@Erceg-Hurn_Mirosevich_2008]. The *F*-test relies on the assumptions that the data are sampled from a normal distribution, and that the data are sampled from distributions that have equal variances [or homoscedasticity; see @Lix_Keselman_Keselman_1996]. While a deviation from the normality assumption still yields quite robust conclusions when using *F*-test [@Glass_et_al_1972], unequal variances rapidly become problematic [@Grissom_2000]. Yet, researchers rarely provide information about these assumptions when they report an *F*-test. When we examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016, fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated to take the homogeneity of variances assumption into account by reporting corrected degrees of freedom for unequal variances, that could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded similar conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James second order test and the Brown-Forsythe ANOVA (*F*\*-test). In this paper, we will discuss the pertinence of the assumptions of parametric tests, and provide simulations comparing *F*-test with the most adequate alternatives. As we argue in this article, the *W*-test has nearly the same statistical power than the *F*-test when variances are unequal, but provides better Type 1 error control. Since the *W*-test is available in practically all statistical software packages, researchers can improve their statistical inferences by replacing the *F*-test by the *W*-test.
+When comparing independent groups researchers often analyze the means by performing a Student's *t*-test or classical Analysis of Variance (ANOVA) *F*-test [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998; @Tomarken_and_Serlin_1986]. Both tests rely on the assumptions that iid\footnote{iid means independent and identically distributed}  residuals (1) are sampled from a normal distribution and (2) have equal variances between groups [or homoscedasticity; see @Lix_Keselman_Keselman_1996]. While a deviation from the normality assumption generally does not strongly affect either the Type I error rates [@Glass_et_al_1972; @Harwell_et_al_1992; @Tiku_1971] or the power of the *F*-test [@Harwell_et_al_1992; @David_and_Johnson_1951; @Srivastava_1959; @Tiku_1971],  the *F*-test is not robust against unequal variances [@Grissom_2000], that can alter both Type I error rate [@Harwell_et_al_1992; @David_and_Johnson_1951] and power [@Nimon_2012;@Overall_et_al_1995]. Type I and type II error rates and power will be formally defined in the section called "Stakes Underlying the *F*-test Assumptions of Normality and Homogeneity of variances".
+
+Yet, researchers rarely provide information about these assumptions when they report an *F*-test. We examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016. Fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated taking the homogeneity of variances assumption into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James second order test and the Brown-Forsythe ANOVA (*F*\*-test). To be clear, we focus exclusively on tests that compare groups based on their means. Our goal, throughout this paper, is not to give methodological considerations about the hypothesis. We agree that they exist many tests that allow to consider not only the mean but also other relevant parameters of the distribution (such as standard deviations and the shape of the distribution), in changing the main hypothesis [see for example @Erceg-Hurn_Mirosevich_2008; @Wilcox_1998], however researchers still rely mostly on the mean differences [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998]. We think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to. Hence, although the debate surrounding the *F*-tests assumptions is widely explored [see for example the meta-analysis of @Harwell_et_al_1992], applied researchers still seem to ignore the consequences of their violations and some non-mathematical pedagogical paper summarizing the arguments seems to be lacking. This paper aims at filling this gap. We will discuss the pertinence of the assumptions of the *F*-test, and focus on the question of heteroscedasticity (that, as we will see, is of major consequences). We will explain, with as few mathematical demonstrations as possible, how the alternative tests cope with heteroscedasticity in order to overcome its impact on the results.We conducted simulations comparing *F*-test with the most adequate alternatives. We argue that when variances are equal between groups, the *W*-test has nearly the same empirital Type I error rate and power than the *F*-test but when variances are unequal, it provides empirical Type 1 error rate and power that are closer to the expected level than the *F*-test.Since the *W*-test is available in practically all statistical software packages, researchers can improve their statistical inferences by replacing the *F*-test by the *W*-test.
 
 # Normality and Homogeneity of variances in Ecological Conditions
 
